# sqldiff

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: generate-icons.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db_mssql.rs  lib.rs  main.rs
src/components/: ConnectionPanel.tsx  Dialog.tsx  DiffViewer.tsx  FunctionsTab.tsx  ManageDatabasesModal.tsx  StoredProcsTab.tsx  TablesTab.tsx
src/types/: index.ts
