[package]
name = "sql-diff"
version = "0.1.0"
description = "A SQL database schema comparison tool"
authors = ["SqlDiff"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "compare_sql_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "mysql", "sqlite"] }
tiberius = { version = "0.12", features = ["tds73", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
diffy = "0.4"
futures-util = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
